add firebase serveur info and fonc

--- a/src/app/film-view/film-view.component.html
+++ b/src/app/film-view/film-view.component.html
@@ -9,4 +9,6 @@
         [id]="film.id">
       </app-film>
     </ul>
+    <button class="btn button-success" (click)="onSave()">Save</button>
+
   </div>
