--- a/src/app/single-film/single-film.component.html
+++ b/src/app/single-film/single-film.component.html
@@ -1,3 +1,10 @@
 <h2>{{ name }}</h2>
-<p>Acteurs : {{ actor }}</p>
+<img/>
+<p>Realisateur  : {{ actor }}</p>
+<h2>Liste des acteurs</h2>
+<ul>
+    <li> </li>
+</ul>
+<p>Date de parution : </p>
+<h3>Teaser</h3>
 <a [routerLink]="['/films']"> Retour à la liste </a>
