--- a/src/app/film-view/film-view.component.html
+++ b/src/app/film-view/film-view.component.html
@@ -1,12 +1,13 @@
 <div class="col-xs-12">
-    <h2>Mes films</h2>
+    <h2>Films</h2>
     <ul class="list-group">
       <ng-container *ngIf="filmSubscription$|async as filmSubscription">
-        <app-film *ngFor="let film of filmSubscription | keyvalue; let i = index" 
-        [film]="film.value"
-        [indexOfFilm]="i"
-        [id]="film.key">
-      </app-film>
+        <input type="text" [(ngModel)]="term">
+        <app-film *ngFor = "let film of filmSubscription | keyvalue | filter:term; let i = index" 
+          [film]="film.value"
+          [indexOfFilm]="i"
+          [id]="film.key">
+        </app-film>
     </ng-container>
     </ul>
   </div>
