--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerLink="films">Acceuil</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="auth">Auth</a>
-      <a class="nav-item nav-link" routerLink="films"> Films </a>
-      <a class="nav-item nav-link" routerLink="edit"> Ajouter un Film</a>
-      <a class="nav-item nav-link" routerLink="users"> Profil </a>
-    </div>
-  </div>
-</nav>
+<app-header></app-header>
 <div class="container">
-  <div class="row">
-    <router-outlet></router-outlet>
-  </div>
+  <router-outlet></router-outlet>
 </div>
